--- a/frontend/src/app/shared/dialog-pref-success/dialog-pref-success.component.html
+++ b/frontend/src/app/shared/dialog-pref-success/dialog-pref-success.component.html
@@ -15,7 +15,7 @@
     <p class="message">
       Your load and schedule preferences for this semester have been submitted.
       You can modify or update your preferences anytime until the submission
-      closes at <strong>{{ deadline | date : "longDate" }}.</strong>
+      deadline at <strong>{{ deadline | date : "longDate" }}  11:59 PM.</strong>
     </p>
   </div>
 
