--- a/frontend/src/app/shared/dialog-pref-success/dialog-pref-success.component.scss
+++ b/frontend/src/app/shared/dialog-pref-success/dialog-pref-success.component.scss
@@ -41,7 +41,7 @@
       .success-text {
         color: var(--primary-text);
         margin: 0;
-        font-size: var(--font-size-xl);
+        font-size: var(--font-size-lg);
         font-weight: 500;
       }
     }
