--- a/frontend/src/app/core/components/faculty/preferences/preferences.component.html
+++ b/frontend/src/app/core/components/faculty/preferences/preferences.component.html
@@ -174,6 +174,7 @@
           <td mat-cell *matCellDef="let element" class="table-cell">
             <button
               mat-icon-button
+              matTooltip="Remove this course from your preference"
               class="remove-button"
               (click)="removeCourse(element)"
             >
