enhance load & sched and preferences styling

--- a/frontend/src/app/core/components/faculty/load-and-schedule/load-and-schedule.component.scss
+++ b/frontend/src/app/core/components/faculty/load-and-schedule/load-and-schedule.component.scss
@@ -52,7 +52,7 @@
 
   .schedule-overview {
     @include flex-layout($align: stretch, $gap: var(--spacing-md));
-    width: 25rem;
+    width: min(25rem, 100%);
 
     .schedule-summary,
     .schedule-history {
@@ -97,23 +97,23 @@
       $direction: column,
       $align: center,
       $justify: center,
-      $gap: var(--spacing-lg)
+      $gap: var(--spacing-xl)
     );
     height: 100%;
     opacity: var(--opacity-semi-opaque);
 
     svg {
-      width: 30rem;
+      width: 13rem;
       height: auto;
     }
 
     .unpublished-text {
       @include flex-layout($gap: var(--spacing-xs));
-      font-size: var(--font-size-mdx);
+      font-size: var(--font-size-md);
       text-align: center;
 
       span[mat-symbol] {
-        font-size: var(--font-size-mdx);
+        font-size: var(--font-size-md);
       }
     }
   }
