--- a/frontend/src/app/core/components/faculty/preferences/preferences.component.html
+++ b/frontend/src/app/core/components/faculty/preferences/preferences.component.html
@@ -1503,9 +1503,14 @@
           </filter>
         </defs>
       </svg>
-      <div class="unpublished-text">
-        <span mat-symbol="info"></span>
-        <span>Faculty preferences submission have been closed.</span>
+      <div class="closed-info">
+        <div class="closed-text">
+          <span mat-symbol="info"></span>
+          <span>Faculty preferences submission has been closed.</span>
+        </div>
+        <div class="view-preferences">
+          <button mat-flat-button>View my submitted preferences</button>
+        </div>
       </div>
     </div>
     }
