--- a/frontend/src/app/core/components/faculty/main/main.component.scss
+++ b/frontend/src/app/core/components/faculty/main/main.component.scss
@@ -81,7 +81,7 @@
       top: 0;
       left: 0;
       height: 100%;
-      background-color: var(--primary-one);
+      @include gradient-primary(315deg);
       border-radius: var(--border-radius-xl);
       transition: all 0.3s cubic-bezier(0.25, 1, 0.5, 1);
       opacity: 0;
