enhance badge styling

--- a/frontend/src/app/core/components/admin/reports/reports.component.scss
+++ b/frontend/src/app/core/components/admin/reports/reports.component.scss
@@ -74,8 +74,8 @@
 
         .faculty-type {
           width: fit-content;
-          padding: var(--spacing-xxs) var(--spacing-xs);
-          border-radius: var(--border-radius-xs);
+          padding: var(--spacing-xxs) var(--spacing-sm);
+          border-radius: var(--border-radius-xl);
           font-size: var(--font-size-xsx);
           font-weight: 500;
           margin: 0 auto;
