--- a/frontend/src/app/shared/table-generic/table-generic.component.scss
+++ b/frontend/src/app/shared/table-generic/table-generic.component.scss
@@ -64,7 +64,7 @@
 
     .status-badge {
       padding: var(--spacing-xxs) var(--spacing-xs);
-      border-radius: var(--border-radius-xs);
+      border-radius: var(--border-radius-xl);
       font-weight: 500;
     }
 
