make the confirm message clearer and more concise

--- a/frontend/src/app/shared/dialog-action/dialog-action.component.html
+++ b/frontend/src/app/shared/dialog-action/dialog-action.component.html
@@ -131,8 +131,8 @@
     && data.currentState) {
     <div class="main-text">
       <div class="confirm-disable">
-        This will override the currently set submission deadline and
-        <strong>immediately</strong> disable the preferences submission.
+        This will <strong>immediately</strong> disable the preferences
+        submission and bypass the currently set deadline.
       </div>
     </div>
     }
