--- a/frontend/src/app/core/components/faculty/preferences/preferences.component.html
+++ b/frontend/src/app/core/components/faculty/preferences/preferences.component.html
@@ -187,8 +187,9 @@
             </button>
           </td>
         </ng-container>
+
         <!-- # Column -->
-        <ng-container matColumnDef="num">
+        <!-- <ng-container matColumnDef="num">
           <th mat-header-cell *matHeaderCellDef class="table-header">#</th>
           <td
             mat-cell
@@ -197,8 +198,9 @@
           >
             {{ i + 1 }}
           </td>
-        </ng-container>
+        </ng-container> -->
 
+        <!-- Course Code Column -->
         <ng-container matColumnDef="course_code">
           <th mat-header-cell *matHeaderCellDef class="table-header">
             Course Code
@@ -208,6 +210,7 @@
           </td>
         </ng-container>
 
+        <!-- Course Title Column -->
         <ng-container matColumnDef="course_title">
           <th mat-header-cell *matHeaderCellDef class="table-header">
             Course Title
@@ -217,6 +220,7 @@
           </td>
         </ng-container>
 
+        <!-- Lec Column -->
         <ng-container matColumnDef="lec_hours">
           <th mat-header-cell *matHeaderCellDef class="table-header">Lec</th>
           <td mat-cell *matCellDef="let element" class="table-cell">
@@ -224,6 +228,7 @@
           </td>
         </ng-container>
 
+        <!-- Lab Column -->
         <ng-container matColumnDef="lab_hours">
           <th mat-header-cell *matHeaderCellDef class="table-header">Lab</th>
           <td mat-cell *matCellDef="let element" class="table-cell">
@@ -231,6 +236,7 @@
           </td>
         </ng-container>
 
+        <!-- Units Column -->
         <ng-container matColumnDef="units">
           <th mat-header-cell *matHeaderCellDef class="table-header">Units</th>
           <td mat-cell *matCellDef="let element" class="table-cell">
@@ -238,49 +244,36 @@
           </td>
         </ng-container>
 
-        <!-- Preferred Day Column -->
-        <ng-container matColumnDef="preferredDay">
+        <!-- Available Day & Time Column -->
+        <ng-container matColumnDef="availableDayTime">
           <th mat-header-cell *matHeaderCellDef class="table-header">
-            Preferred Day
+            Available Day & Time
           </th>
-          <td mat-cell *matCellDef="let element" class="table-cell">
-            <button
-              mat-button
-              (click)="openDayDialog(element)"
-              class="preferred-button day"
-            >
-              <mat-icon fontSet="material-icons-round" class="preferred-icon"
-                >calendar_today</mat-icon
+          <td mat-cell *matCellDef="let element" class="table-cell picker-cell">
+            <div class="day-time-button-container">
+              <button
+                mat-button
+                matTooltip="Click to select your available day and time"
+                (click)="openDayTimeDialog(element)"
+                class="day-time-button"
               >
-              {{ element.preferredDay ? element.preferredDay : "Select day" }}
-            </button>
+                <mat-icon fontSet="material-icons-round">today</mat-icon>
+                <span class="display-day-time">
+                  {{
+                    element.preferredDay && element.preferredTime
+                      ? element.preferredDay +
+                        ", " +
+                        (element.preferredTime === "07:00 AM - 09:00 PM"
+                          ? "Whole Day"
+                          : (element.preferredTime | timeFormat))
+                      : "Select day & time"
+                  }}
+                </span>
+              </button>
+            </div>
           </td>
         </ng-container>
 
-        <!-- Preferred Time Column -->
-        <ng-container matColumnDef="preferredTime">
-          <th mat-header-cell *matHeaderCellDef class="table-header">
-            Preferred Time
-          </th>
-          <td mat-cell *matCellDef="let element" class="table-cell">
-            <button
-              mat-button
-              (click)="openTimeDialog(element)"
-              class="preferred-button time"
-            >
-              <mat-icon fontSet="material-icons-round">schedule</mat-icon>
-              <span class="display-time">
-                {{
-                  element.preferredTime === "Whole Day"
-                    ? "Whole Day"
-                    : element.preferredTime
-                    ? (element.preferredTime | timeFormat)
-                    : "Select time"
-                }}
-              </span>
-            </button>
-          </td>
-        </ng-container>
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr
           mat-row
@@ -324,7 +317,7 @@
           (click)="!isSubmitDisabled && submitPreferences()"
           [matTooltip]="
             isSubmitDisabled
-              ? 'Select one or more courses, ensuring each has a preferred day and time.'
+              ? 'Select one or more courses and ensure each has a selected day and time.'
               : ''
           "
           [class.disabled]="isSubmitDisabled"
