add gradient to action buttons

--- a/frontend/src/app/core/components/faculty/preferences/preferences.component.html
+++ b/frontend/src/app/core/components/faculty/preferences/preferences.component.html
@@ -44,7 +44,9 @@
     <div id="courses_container" [@fadeAnimation]>
       <div id="courses_search">
         <mat-form-field appearance="fill" class="custom-mat-search">
-          <mat-label>Search Courses</mat-label>
+          <mat-label matTooltip="Search using a course code or course title"
+            >Search Courses</mat-label
+          >
           <input
             matInput
             maxlength="50"
