--- a/frontend/src/app/shared/dialog-action/dialog-action.component.html
+++ b/frontend/src/app/shared/dialog-action/dialog-action.component.html
@@ -152,6 +152,7 @@
     <button
       mat-flat-button
       color="primary"
+      class="action-button"
       (click)="confirmAction()"
       [disabled]="
         isProcessing ||
