--- a/frontend/src/app/shared/dialog-day-time/dialog-day-time.component.html
+++ b/frontend/src/app/shared/dialog-day-time/dialog-day-time.component.html
@@ -1,7 +1,8 @@
 <div class="dialog-day-time-container">
   <!-- Dialog Title -->
   <div class="dialog-title">
-    <span id="title_text">Select Day & Time</span>
+    <h2 class="title-text">Select Day & Time</h2>
+    <span class="course-detail">For {{ courseCode }} - {{ courseTitle }}</span>
   </div>
 
   <!-- Dialog Content -->
