--- a/frontend/src/app/shared/dialog-action/dialog-action.component.html
+++ b/frontend/src/app/shared/dialog-action/dialog-action.component.html
@@ -7,7 +7,7 @@
     <!-- Main Action Text -->
     <div class="main-text">
       <strong>{{ actionText }}</strong>
-      @if (data.type === 'all_preferences' || data.type === 'publish' ) {
+      @if (data.type === 'all_preferences' || data.type === 'all_publish' ) {
       <span>
         {{
           data.type === "all_preferences"
