--- a/frontend/src/app/shared/dialog-action/dialog-action.component.scss
+++ b/frontend/src/app/shared/dialog-action/dialog-action.component.scss
@@ -92,7 +92,7 @@
     .email-checkbox,
     .report-checkbox {
       width: 100%;
-      background-color: var(--neutral-option);
+      background-color: var(--neutral-light);
       border-radius: var(--spacing-xs);
       padding: var(--spacing-xxxs);
 
