disable global preferences toggle if there are at least one set individual schedule

--- a/frontend/src/app/core/components/admin/faculty-pref/faculty-pref.component.html
+++ b/frontend/src/app/core/components/admin/faculty-pref/faculty-pref.component.html
@@ -155,6 +155,7 @@
             <mat-slide-toggle
               class="header-toggle"
               [checked]="isToggleAllChecked"
+              [disabled]="isAnyIndividualToggleOn"
               [matTooltip]="getAllToggleTooltip(isToggleAllChecked)"
               (change)="onToggleAllPreferences($event)"
             >
