--- a/frontend/src/app/core/components/faculty/home/home.component.scss
+++ b/frontend/src/app/core/components/faculty/home/home.component.scss
@@ -9,9 +9,11 @@
   @include flex-layout(
     $align: stretch,
     $justify: center,
+    // $justify: flex-start,
+    $direction: column,
     $gap: var(--spacing-lg)
   );
-  height: 100%;
+  // height: 100%;
   overflow: hidden;
 }
 
@@ -103,5 +105,35 @@
     border-radius: (var(--border-radius-md));
     padding: var(--spacing-md);
     user-select: none;
+  }
+}
+
+/* For Mobile Responsive */
+@media (max-width: 768px) {
+  .home-row-one,
+  .home-row-two {
+    flex-direction: column;
+    padding: var(--spacing-sm);
+  }
+
+  #home_greetings h1 {
+    font-size: var(--font-size-md);
+  }
+
+  .faculty-calendar .full-calendar {
+    max-height: 20rem;
+    overflow-y: auto;
+  }
+
+  .active-year-sem-container {
+    padding: var(--spacing-xs);
+    font-size: var(--font-size-md);
+    text-align: center;
+  }
+
+  .faculty-announcement {
+    font-size: var(--font-size-sm);
+    padding: var(--spacing-sm);
+    text-align: center;
   }
 }
